[project]
name = "adamantine_utils"            # Your package name
version = "0.1.0"              # Initial version
description = "A python package with Adamantine utilities"
authors = [
    { name = "Stephen DeWitt", email = "dewittsj@ornl.gov" }
]
readme = "README.md"           # Optional, could also be "README.rst"
license = { text = "MIT" }     # SPDX license identifier
requires-python = ">=3.11"     # Minimum Python version

# Runtime dependencies
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

# Optional groups (like extras)
[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
