[project]
name = "adamantine_utils"            # Your package name
version = "0.1.0"              # Initial version
description = "A python package with Adamantine utilities"
authors = [
    { name = "Stephen DeWitt", email = "dewittsj@ornl.gov" }
]
readme = "README.md"           # Optional, could also be "README.rst"
license = { text = "Apache-2.0 WITH LLVM-exception" }     # SPDX license identifier
requires-python = ">=3.12"     # Minimum Python version

# Runtime dependencies
dependencies = [
    "pyvista",
    "opencv-python",
    "numpy>=1.26.0",
]

# Optional groups (like extras)
[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
